--- a/games/twitch-tetris/about.html
+++ b/games/twitch-tetris/about.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <title>TwitchTetris</title>
-    <link href="//fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css" />
-    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
@@ -11,7 +12,7 @@
       <tr>
 	<td class="menuCell">
 	  <div class="menu">
-	    <img class="menuLogo" src="media/background/logo.png"></img>
+	    <img class="menuLogo" src="media/background/logo.png">
 	    <br/><br/>
 	    
 	    <a href="index.html" class="bareLink">
@@ -19,7 +20,7 @@
 	    </a>
 	    <br/>
 	    <a href="controls.html" class="bareLink">
-	      <div class="menuItem">Controls Options</div>
+	      <div class="menuItem">Options</div>
 	    </a>
 	    <br/>
 	    <a href="highScores.html" class="bareLink">
