--- a/games/twitch-tetris/scoreScreen.html
+++ b/games/twitch-tetris/scoreScreen.html
@@ -14,7 +14,7 @@
       <tr>
 	<td class="menuCell">
 	  <div class="menu">
-	    <img class="menuLogo" src="media/background/logo.png"></img>
+	    <img class="menuLogo" src="media/background/logo.png">
 	    <br/><br/>
 
 	    <a href="index.html" class="bareLink">
@@ -22,7 +22,7 @@
 	    </a>
 	    <br/>
 	    <a href="controls.html" class="bareLink">
-	      <div class="menuItem">Controls Options</div>
+	      <div class="menuItem">Options</div>
 	    </a>
 	    <br/>
 	    <a href="highScores.html" class="bareLink">
@@ -51,7 +51,7 @@
 	  <div class="scoreArea" id="scoreDiv"></div>
 	  <div id="applyNameDiv" class="applyNameHidden">
 	    Congratulations! You have made a top Score!<br/>
-	    Enter your name and hit ENTER to submit your name!</br>
+	    Enter your name and hit ENTER to submit your name!<br>
 	    <label for="nameInput">Name: </label>
 	    <input type="text" id="nameInput" onkeydown="nameKeyDown(event)" />
 	  </div>
