--- a/games/twitch-tetris/controls.html
+++ b/games/twitch-tetris/controls.html
@@ -120,7 +120,34 @@
                     <div class="cheatsArea">
                         Cheats
                         <br>
-                        TODO
+                        <label for="cheats">Enabled</label>
+                        <input type="checkbox" id="cheats">
+                        <br><br>
+                        Random Seed
+                        <br>
+                        <label for="randomSeed">Enabled</label>
+                        <input type="checkbox" id="randomSeed">
+                        <br>
+                        <label for="seed">Seed</label>
+                        <input type="number" id="seed">
+                        <br><br>
+                        Multi Hold
+                        <br>
+                        <label for="multiHold">Enabled</label>
+                        <input type="checkbox" id="multiHold">
+                        <br><br>
+                        Piece Filter
+                        <br>
+                        <label for="pieceFilter">Enabled</label>
+                        <input type="checkbox" id="pieceFilter">
+                        <br>
+                        <input type="checkbox" class="cyanCheckbox" id="iPiece">
+                        <input type="checkbox" class="yellowCheckbox" id="oPiece">
+                        <input type="checkbox" class="blueCheckbox" id="jPiece">
+                        <input type="checkbox" class="orangeCheckbox" id="lPiece">
+                        <input type="checkbox" class="redCheckbox" id="zPiece">
+                        <input type="checkbox" class="greenCheckbox" id="sPiece">
+                        <input type="checkbox" class="purpleCheckbox" id="tPiece">
                     </div>
                 </td>
             </tr>
