--- a/games/twitch-tetris/about.html
+++ b/games/twitch-tetris/about.html
@@ -40,7 +40,7 @@
 	      <b> &gt TwitchTetris --help </b>
 	      <p>Use the keyboard controls to rotate and move the blocks as they fall</p>
 	      <p>Place the blocks to form horizontal lines, which will be removed and make all the blocks above fall down. If the blocks reach the top of the screen, the game is over!</p>
-	      <p>Clear multiple lines at a time, or clear lines in consective moves to earn more points.</p>
+	      <p>Clear multiple lines at a time, or clear lines in consecutive moves to earn more points.</p>
 	    </div>
 
 	  </div>
@@ -53,7 +53,7 @@
 	    
 	    <p>This project is still in the infancy of development. Please go to <a href="http://code.google.com/p/html5tetris/">the google code page</a> to report <i>any</i> bugs, problems, or suggestions that you have for the game. Contributions from other developers are also welcome.</p>
 	    
-	    <p>While TwitchTetris is not deisgned to generate revenue, ads are displayed on this website in order to cover the potential cost incurring high traffic. There are no plans to expand advertising past one or 2 ads per page, and obtrusive ads which make users wait to play the game will never be shown on this website.</p>
+	    <p>While TwitchTetris is not designed to generate revenue, ads are displayed on this website in order to cover the potential cost incurring high traffic. There are no plans to expand advertising past one or 2 ads per page, and obtrusive ads which make users wait to play the game will never be shown on this website.</p>
 
 	  </div>
 	</td>
