--- a/games/twitch-tetris/scoreScreen.html
+++ b/games/twitch-tetris/scoreScreen.html
@@ -42,7 +42,7 @@
 	      <b> &gt TwitchTetris --help </b>
 	      <p>Use the keyboard controls to rotate and move the blocks as they fall</p>
 	      <p>Place the blocks to form horizontal lines, which will be removed and make all the blocks above fall down. If the blocks reach the top of the screen, the game is over!</p>
-	      <p>Clear multiple lines at a time, or clear lines in consective moves to earn more points.</p>
+	      <p>Clear multiple lines at a time, or clear lines in consecutive moves to earn more points.</p>
 	    </div>
 
 	  </div>
