--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav>
         <img src="images/logo.png" alt="logo" id="logoImg"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.5.4 (12.11.2025)</p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.5.5 (12.12.2025) - Seeecret Friday 10!</p><p id="time"><p id="accountstuff"><a href="./account.html"></a></a></p></p>
     </nav>
     <div class="featured">
         <h1 id="message"></h1>
