--- a/games/twitch-tetris/controls.html
+++ b/games/twitch-tetris/controls.html
@@ -125,7 +125,7 @@
                         <input type="checkbox" id="randomSeed">
                         <br>
                         <label for="seed">Seed</label>
-                        <input type="number" id="seed">
+                        <input type="number" id="seed" value="1">
                         <br><br>
                         Multi Hold
                         <br>
@@ -144,6 +144,20 @@
                         <input type="checkbox" class="redCheckbox" id="zPiece">
                         <input type="checkbox" class="greenCheckbox" id="sPiece">
                         <input type="checkbox" class="purpleCheckbox" id="tPiece">
+                        <br><br>
+                        Row Blocker
+                        <br>
+                        <label for="rowBlocker">Enabled</label>
+                        <input type="checkbox" id="rowBlocker">
+                        <br>
+                        <label for="rowCount">Count</label>
+                        <input type="number" id="rowCount" value="1">
+                        <br><br>
+                        Piece Binds
+                        <br>
+                        <label for="pieceBinds">Enabled</label>
+                        <input type="checkbox" id="pieceBinds">
+                        <br>
                     </div>
                 </td>
             </tr>
