--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body <!--class="light"-->>
     <nav id="nav">
         <img src="images/logo.png" alt="logo" id="logoImg"> <!-- we change nothing about the logo because we are too lazy to, #lit -->
-        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.5.6 (12.15.2025)</p><p id="time"></p><p id="accountstuff"><a href="./account.html"></a></p>
+        <h1 id="zgtitle">ZGames</h1><p class="version">(sponsored by S.W.A.G Party) v2.5.7 (1.20.2025)</p><p id="time"></p><p id="accountstuff"><a href="./account.html"></a></p>
     </nav>
     <div class="featured">
         <h1 id="message"></h1>
@@ -136,6 +136,7 @@
         <a href="https://zkayns.github.io/timcheese/subway-surfers-beijing"><img src="images/subway-surfers-beijing.png" alt="Subway Surfers Beijing"></a>
         <a href="https://zkayns.github.io/timcheese/subway-surfers-houston"><img src="images/subway-surfers-houston.jpeg" alt="Subway Surfers Houston"></a>
         <a href="https://zkayns.github.io/crazycattle3d"><img src="images/crazycattle3d.png" alt="Crazy Cattle 3D"></a>
+        <a href="https://zkayns.github.io/rplatformer"><img src="images/RPlatformer.png" alt="RPlatformer"></a>
         <a href="https://rufflez.netlify.app"><img src="images/ruffle.png" alt="Ruffle"></a>
         <a href="https://waflash-demo.netlify.app"><img src="images/waflash.png" alt="WAFlash"></a>
         <a href="./games/webretro-standalone.html"><img src="images/webretro.png" alt="WebRetro"></a>
